Documentation edits made through Mintlify web editor

--- a/mcp-server.mdx
+++ b/mcp-server.mdx
@@ -1,6 +1,7 @@
 ---
 title: "MCP Server"
 description: "Ship true native features for your web-native apps faster and with more precision using the Despia MCP."
+icon: "folder-tree"
 ---
 
 The Despia Documentation MCP provides AI code builders with documentation and context about the `despia-native` npm package.
