Documentation edits made through Mintlify web editor

--- a/lovable/native-features/offline-push.mdx
+++ b/lovable/native-features/offline-push.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Offline Push"
 description: "Send instant local notifications to users with customizable messages, titles, and timing through your Lovable mobile app."
+icon: "bell"
 ---
 
 <iframe src="https://www.youtube.com/embed/7k-DRdjRrWU" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
