Documentation edits made through Mintlify web editor

--- a/local-server/how-it-works.mdx
+++ b/local-server/how-it-works.mdx
@@ -1,6 +1,7 @@
 ---
 title: "How it Works"
 description: "Despia's local server lets you ship native iOS and Android apps that boot instantly and work completely offline. It's optional, but if you need real offline support or maximum performance, this is how you do it."
+icon: "lightbulb"
 ---
 
 ## What does it do?
